--- a/src/main/resources/templates/user/main/sample.html
+++ b/src/main/resources/templates/user/main/sample.html
@@ -95,8 +95,8 @@
 
   <!-- 체크 -->
   <div class="check-btn">
-    <input type="checkbox" id="check-btn" />
-    <label for="check-btn"></label>
+    <input type="checkbox" class="check-box" id="" />
+    <label for=""></label>
   </div>
 
   <!-- 수량 클릭 -->
