--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -41,6 +41,11 @@ button {
     cursor: pointer;
 }
 
+button:focus {
+    border: none;
+    outline: none;
+}
+
 .default-btn {
     width: 80px;
     height: 40px;
@@ -143,7 +148,7 @@ input[type='radio']:checked {
 }
 
 /* 체크박스 */
-input#check-btn[type=checkbox] {
+input.check-box[type=checkbox] {
     opacity: 0;
     position: absolute;
     width: 20px;
@@ -151,7 +156,7 @@ input#check-btn[type=checkbox] {
     cursor: pointer;
 }
 
-input#check-btn[type=checkbox] + label {
+input.check-box[type=checkbox] + label {
     display: inline-block;
     background-image: url(/user/common/imgs/check-circle=off.svg);
     background-repeat: no-repeat;
@@ -162,7 +167,7 @@ input#check-btn[type=checkbox] + label {
     height: 20px;
 }
 
-input#check-btn[type=checkbox]:checked + label {
+input.check-box[type=checkbox]:checked + label {
     background-image: url(/user/common/imgs/check-circle=on.svg);
 }
 
@@ -303,11 +308,14 @@ input[type='number'] {
 
 /* 검색결과(기타 등등) 없을때 */
 .result-wrap {
-    display: inline-flex; /* 아예 가운데로 놓고 싶으면 flex로 수정 */
+    width: 100%;
+    padding: 50px 0;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
+    border-bottom: 1px solid #c0c0c0;
 }
 
 .result-wrap p {
