--- a/src/main/resources/static/user/common/css/modal.css
+++ b/src/main/resources/static/user/common/css/modal.css
@@ -1,6 +1,5 @@
 /* 모달 스타일 추가 */
 .modal {
-   
    position: fixed;
    z-index: 1000;
    left: 0;
@@ -21,6 +20,7 @@
    width: 300px;
    height: 155px;
    border-radius: 8px;
+   overflow: hidden;
 }
 
 .modal-text {
@@ -49,6 +49,10 @@
    align-items:center;
 }
 
+.modal-footer button {
+   background-color: #ffffff;
+}
+
 .modal-footer .modal-btn {
    width: 100%;
    height: 45px;
@@ -56,7 +60,7 @@
 }
 
 .modal-footer .modal-btn.confirm {
-   color: #4777F6;
+   color: #845EC2;
    font-size: 16px;
    font-weight: 700;
 }
