Feat: header 전체 검색 기능 추가 및 검색분야 노출 조건 수정

--- a/src/main/resources/templates/user/common/fragments/header.html
+++ b/src/main/resources/templates/user/common/fragments/header.html
@@ -16,7 +16,7 @@
 			<a href="./main"> <img src="/user/common/imgs/web-header-logo.svg" alt="로고" class="logo-img">
 			</a>
 			<div class="searchbar">
-				<input type="text" name="searchKeyword" class="search-input"> <i class="fa-solid fa-magnifying-glass search-icon"></i>
+				<input type="text" id="searchKeyword" name="searchKeyword" class="search-input" th:value="${condition != null ? condition.word : ''}"> <i class="fa-solid fa-magnifying-glass search-icon"></i>
 			</div>
 		</div>
 
@@ -39,8 +39,8 @@
 		</div>
 
 		<ul class="nav-category-list">
-			<li><a href="" class="nav-category-item">국내도서</a></li>
-			<li><a href="" class="nav-category-item">외국도서</a></li>
+			<li><a href="/user/products/searchForm?categoryCountryType=01" class="nav-category-item">국내도서</a></li>
+			<li><a href="/user/products/searchForm?categoryCountryType=02" class="nav-category-item">외국도서</a></li>
 			<li><a href="" class="nav-category-item">베스트</a></li>
 			<li><a href="" class="nav-category-item">신상품</a></li>
 		</ul>
