--- a/src/main/resources/templates/user/main/products/searchForm.html
+++ b/src/main/resources/templates/user/main/products/searchForm.html
@@ -33,7 +33,7 @@
 					<input type="radio" name="search_conditions" value="book_publisher" id="book-publisher-radio" th:checked="${condition.search_conditions == 'book_publisher'}" hidden="hidden">
 				</div>
 			</div>
-			<div class="search-condition-flex">
+			<div class="search-condition-flex" th:if="${!#strings.isEmpty(condition.categoryCountryType)}">
 				<div class="search-condition-title condition-title-style">검색분야</div>
 				<div class="filter-btn-wrap">
 					<div th:each="category : ${categoryList}">
@@ -47,7 +47,8 @@
 			</div>
 		</div>
 		
-		<input type="hidden" name="orderByValue" />
+		<input type="hidden" name="categoryCountryType" th:value="${condition.categoryCountryType}"/>
+		<input type="hidden" name="orderByValue" th:value="${condition.orderByValue}"/>
 	</form>
 	<div class="flex-row">
 		<div class="flex-column">
@@ -57,57 +58,63 @@
 				<span>건</span>
 			</div>
 			<div class="order-area">
-				<span onclick="productOrderBy(1)" th:classappend="${condition.orderByValue == 1} ? 'order-by-click' : ''">판매량</span>
-				<span onclick="productOrderBy(2)" th:classappend="${condition.orderByValue == 2} ? 'order-by-click' : ''">최근출판</span>
-				<span onclick="productOrderBy(3)" th:classappend="${condition.orderByValue == 3} ? 'order-by-click' : ''">낮은가격</span>
-				<span onclick="productOrderBy(4)" th:classappend="${condition.orderByValue == 4} ? 'order-by-click' : ''">높은평점</span>
-				<span onclick="productOrderBy(5)" th:classappend="${condition.orderByValue == 5} ? 'order-by-click' : ''">리뷰수</span>
+				<span data-value="1" th:classappend="${condition.orderByValue == 1} ? 'order-by-click' : ''">판매량</span>
+				<span data-value="2" th:classappend="${condition.orderByValue == 2} ? 'order-by-click' : ''">최근출판</span>
+				<span data-value="3" th:classappend="${condition.orderByValue == 3} ? 'order-by-click' : ''">낮은가격</span>
+				<span data-value="4" th:classappend="${condition.orderByValue == 4} ? 'order-by-click' : ''">높은평점</span>
+				<span data-value="5" th:classappend="${condition.orderByValue == 5} ? 'order-by-click' : ''">리뷰수</span>
 			</div>
 		</div>
 		<div>
-			<button class="check-basket-btn">장바구니담기</button>
+			<button class="check-basket-btn" onclick="basketList();">장바구니담기</button>
 		</div>
 	</div>
 	<div>
 		<div th:each="product : ${productList}">
-			<div class="product-list-area">
-			    <div class="product-checkbox-area check-btn">
-				    <input type="checkbox" id="check-btn" th:value="${product.book_isbn}">
-				    <label for="check-btn"></label>
-				  </div>
-			    <div class="product-img-area">
-			        <img class="product-image" th:src="@{/images/books/{image}(image=${product.book_thumbnail_changed})}" alt="책 이미지">
-			    </div>
-			    <div class="product-info-area">
-			        <div th:text="${product.book_name}" class="book-name"></div>
-			        <div class="book-author">
-			        	<span th:text="${product.book_author}"></span>
-			        	<span>저자(글)</span>
-			        </div>
-			        <div th:text="${product.book_publisher} + ' · ' + ${#dates.format(product.book_publish_date, 'yyyy-MM-dd')}" class="book-publisher">
-			        </div>
-			        <div th:text="${#numbers.formatInteger(product.book_price, 0, 'COMMA')} + ' 원'" class="book-price"></div>
-			        <div>
-			        	<i class="raing-ico"></i>
-			        	<span th:text="${product.reviews_rating_avg}" class="reviews_rating_avg"></span>
-			        	<span th:text="'(' + ${product.review_rating_cnt} + ')'" class="reviews_rating_cnt"></span>
-			        </div>
-			    </div>
-			    <div class="product-btn-area" th:if="${product.book_state == '01' && product.book_qty > 0}">
-			        <div class="purchase-btn-area">
-			            <button class="purchase-btn">바로구매</button>
-			        </div>
-			        <div>
-						<button class="basket-btn">장바구니</button>
-			        </div>
-			    </div>
-			    <div class="product-btn-area" th:if="${product.book_state != '01' || product.book_qty <= 0}">
-				    <div class="purchase-btn-area">
-			            <button class="impossibility-btn">구매불가</button>
-			        </div>
-			    </div>
-			</div>
+			<form id="product-list-form">
+				<div class="product-list-area">
+				    <div class="product-checkbox-area check-btn">
+					    <input type="checkbox" id="check-btn" th:value="${product.book_isbn}">
+					    <label for="check-btn"></label>
+					  </div>
+				    <div class="product-img-area">
+				        <img class="product-image" th:src="@{/images/books/{image}(image=${product.book_thumbnail_changed})}" alt="책 이미지">
+				    </div>
+				    <div class="product-info-area">
+				        <div th:text="${product.book_name}" class="book-name"></div>
+				        <div class="book-author">
+				        	<span th:text="${product.book_author}"></span>
+				        	<span>저자(글)</span>
+				        </div>
+				        <div th:text="${product.book_publisher} + ' · ' + ${#dates.format(product.book_publish_date, 'yyyy-MM-dd')}" class="book-publisher">
+				        </div>
+				        <div th:text="${#numbers.formatInteger(product.book_price, 0, 'COMMA')} + ' 원'" class="book-price"></div>
+				        <div>
+				        	<i class="raing-ico"></i>
+				        	<span th:text="${product.reviews_rating_avg}" class="reviews_rating_avg"></span>
+				        	<span th:text="'(' + ${product.review_rating_cnt} + ')'" class="reviews_rating_cnt"></span>
+				        </div>
+				    </div>
+				    <div class="product-btn-area" th:if="${product.book_state == '01' && product.book_qty > 0}">
+				        <div class="purchase-btn-area">
+				            <button class="purchase-btn btn-default">바로구매</button>
+				        </div>
+				        <div>
+							<button class="basket-btn btn-default" th:data-value="${product.book_isbn}" onclick="basket(this);">장바구니</button>
+				        </div>
+				    </div>
+				    <div class="product-btn-area" th:if="${product.book_state != '01' || product.book_qty <= 0}">
+					    <div class="purchase-btn-area">
+				            <button class="impossibility-btn">구매불가</button>
+				        </div>
+				    </div>
+				</div>
+			</form>
 		</div>
+	</div>
+	
+	<div th:each="i : ${#numbers.sequence(1, page.pageSize)}" th:text="${i}">Number
+		<a th:text="${i}"></a>
 	</div>
 </div>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
