Design: 장바구니 페이지 / Feat: main 페이지 베스트셀러의 월 변경 기능

--- a/src/main/resources/templates/user/common/fragments/header.html
+++ b/src/main/resources/templates/user/common/fragments/header.html
@@ -13,7 +13,7 @@
 
 	<div class="header-center">
 		<div class="logo-searchbar">
-			<a href="./main"> <img src="/user/common/imgs/web-header-logo.svg" alt="로고" class="logo-img">
+			<a href="/user/main"> <img src="/user/common/imgs/web-header-logo.svg" alt="로고" class="logo-img">
 			</a>
 			<div class="searchbar">
 				<input type="text" name="searchKeyword" class="search-input"> <i class="fa-solid fa-magnifying-glass search-icon"></i>
@@ -26,7 +26,7 @@
 					<p></p>
 				</div>
 			</a> <a href=""> <i class="fa-solid fa-circle-user user-icon"></i>
-		</a>
+			</a>
 		</div>
 	</div>
 	<!-- 카테고리 -->
@@ -54,7 +54,9 @@
 					<img src="/user/common/imgs/category-list-button.svg" alt="카테고리목록" class="all-categories-icon">
 				</div>
 			</div>
-			<img src="/user/common/imgs/web-fixed-header-logo.svg" alt="로고" class="header-fixed-logo-img">
+			<a href="/user/main"> 
+				<img src="/user/common/imgs/web-fixed-header-logo.svg" alt="로고" class="header-fixed-logo-img">
+			</a>
 			<div class="searchbar">
 				<input type="text" name="searchKeyword" class="search-input"> <i class="fa-solid fa-magnifying-glass search-icon"></i>
 			</div>
@@ -63,9 +65,7 @@
 					<div class="cart-qty">
 						<p></p>
 					</div>
-				</a>
-				<a href=""> <i class="fa-solid fa-circle-user user-icon"></i></a>
-				<a href=""> <img src="/user/common/imgs/web-cs-icon.svg" alt="고객센터" class="cs-icon"></a>
+				</a> <a href=""> <i class="fa-solid fa-circle-user user-icon"></i></a> <a href=""> <img src="/user/common/imgs/web-cs-icon.svg" alt="고객센터" class="cs-icon"></a>
 			</div>
 		</div>
 	</div>
