--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -3,43 +3,62 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" href="/user/common/css/common.css" />
+<link rel="stylesheet" href="/user/login/css/login.css" />
+
 </head>
 <body>
-	<form th:action="@{/user/loginProc}" method="POST" class="login-form">
-                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"> <!-- CSRF 토큰 추가 -->
+	<img src="/user/common/imgs/main-logo.svg" alt="메인로고" class="mainlogo" />
 
-              
-        <div class="frame">
-            <div class="input-container" id="usernameContainer" 
-                 th:classappend="${param.usernameError} ? 'error-border' : ''">
-                <input id="id" class="id" type="text" th:name="username" 
-                       placeholder="아이디" required />
-            </div>
-            
-            <div th:if="${param.usernameError}" class="error-message">
-                <p th:text="${param.usernameError}"></p>
-            </div>
-        </div>
-        
-        <br>
-        
-        <div class="frame">
-            <div class="input-container" id="passwordContainer" 
-                 th:classappend="${param.passwordError} ? 'error-border' : ''">
-                <input id="password" class="password" type="password" th:name="password" 
-                       placeholder="비밀번호" required />
-            </div>
-            
-            <div th:if="${param.passwordError}" class="error-message">
-                <p th:text="${param.passwordError}"></p>
-            </div>
-        </div>
-        
-        <br>
-        
-        <button type="submit" class="default-btn">로그인</button>
-    </form>
+    <div class="login-frame">      
+		<form th:action="@{/user/loginProc}" method="POST" class="login-form">
+    		<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}">
+	        <div class="form-list login">
+	            <div class="form-item id" id="username">
+	                <input id="id" class="id" type="text" th:name="username" 
+	                       placeholder="아이디를 입력하세요" required />
+	            </div>
+	            <div class="form-item pw" id="password">
+	                <input id="password" class="password" type="password" th:name="password" 
+	                       placeholder="비밀번호를 입력하세요" required />
+	            </div>
+		        <div class="form-item error" style="display:none;">		            
+			        <div th:if="${param.usernameError}" class="error-message">
+			            <p th:text="${param.usernameError}"></p>
+			        </div>
+		            <div th:if="${param.passwordError}" class="error-message">
+		                <p th:text="${param.passwordError}"></p>
+		            </div>
+		        </div>
+		        <div class="login-function">
+			        <div class="id-store">
+						<div><input type="radio" />아이디 저장 ></div>
+					</div>
+					<div class="findId">
+						<div onclick="window.location.href='/user/find-id';" style="cursor: pointer;">아이디 찾기</div>
+					</div>
+					<div class="findPw">
+						<div onclick="window.location.href='/user/find-id';" style="cursor: pointer;">비밀번호 찾기</div>						
+					</div>
+					
+				</div>
+		        <div class="join-wrap-social">
+					<div>
+						<button><img src="/user/common/imgs/sns-login-btn-naver.png" alt="네이버 소셜 연동" class="social-btn" /></button>	
+					</div>
+					<div>
+						<button ><img src="/user/common/imgs/sns-login-btn-kakao.png" alt="카카오 소셜 연동" class="social-btn" /></button>
+					</div>	
+				</div>
+	        </div>
+			<div>	            	                
+	        	<button type="submit" class="default-btn long login">로그인</button>
+	        </div>
+	        <div>
+	        	<button type="button" class="default-btn long register" onclick="location.href='/user/members/join'">회원가입</button>
+	        </div>
+	    </form>
+	</div>        
     
-    <button type="button" onclick="location.href='/user/members/join'">회원가입</button>
 </body>
 </html>
