--- a/src/main/resources/static/admin/customer_orders/css/detail.css
+++ b/src/main/resources/static/admin/customer_orders/css/detail.css
@@ -105,6 +105,12 @@
 .price-column, .price-data { width: 10%; }
 .qty-column, .qty-data { width: 9%; }
 
+.book-title-data > span {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .request-qty-column, .request-qty-data { width: 10%; }
 .input-qty-column, .input-qty-data { width: 6%; }
 .input-qty-data > span, .input-qty-data > span > input { width: 100%; text-align: center; padding: 0; }
