--- a/src/main/resources/static/admin/notice/css/noticeReg.css
+++ b/src/main/resources/static/admin/notice/css/noticeReg.css
@@ -8,7 +8,7 @@
 	grid-template-columns: 100px 1fr;
 	align-items: center;
 	gap: 10px;
-	border-bottom: 2px solid #D8D8D8;
+	border-bottom: 1px solid #D8D8D8;
 	padding: 20px 20px;
 }
 
@@ -32,12 +32,12 @@
 .editor {
 	width: 100%;
 	height: 500px;
-	border: 2px solid #D8D8D8;
 	padding: 10px;
+	border: 1px solid #D8D8D8;
+	border-radius: 5px;
+	background-color: #fdfdfd;
 	overflow-y: auto;
-	background-color: #fafafa;
 	font-size: 18px;
-	font-weight: 300;
 }
 
 .editor:focus {
