--- a/src/main/resources/templates/user/mypage/member_update/memberUpdate.html
+++ b/src/main/resources/templates/user/mypage/member_update/memberUpdate.html
@@ -6,23 +6,33 @@
       layout:fragment="Content">
 	
 	  <link rel="stylesheet" href="/user/mypage/css/memberUpdate.css" />
-	      
-<div class="inner">
-	<div>
-		<span class="middle-font">회원정보수정</span>
-		<form action="/user/mypage/checkPw" method="POST">
-			<div class="pw-checkbox">
-				<div class="pw-checkbox-span">
-					<span class="big-font">비밀번호 확인</span>
-					<span class="default-font">안전한 개인정보보호를 위해 비밀번호를 입력해주세요.</span>
+	  <link rel="stylesheet" href="/user/mypage/css/eyeIcon.css"/>
+	  <link rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+      
+<div class="content">
+	<span class="middle-font">회원정보수정</span>
+		<div class="pw-box">
+			<form action="/user/mypage/checkPw" method="POST">
+				<div class="pw-checkbox">
+					<div class="pw-checkbox-span">
+						<span class="big-font">비밀번호 확인</span>
+						<span class="default-font">안전한 개인정보보호를 위해 비밀번호를 입력해주세요.</span>
+					</div>
+					<div class="pw-checkbox-input">
+						<span class="middle-font">비밀번호</span>
+						
+						<div class="eye-container">
+							<input type="password" class="input-long" th:name="member_pw" placeholder="비밀번호를 입력하세요.">
+							<i id="eye" class="fa fa-eye fa-lg"></i>
+						</div>
+						
+						<button type="submit" class="default-btn">확인</button>				
+					</div>
 				</div>
-				<div class="pw-checkbox-input">
-					<span class="middle-font">비밀번호</span>
-					<input type="password" class="input-long" th:name="member_pw" placeholder="비밀번호를 입력하세요.">
-					<button type="submit" class="default-btn">확인</button>				
-				</div>
-			</div>
-		</form>
-	</div>
+				<input type="hidden" th:name="page" th:value="${page}">
+			</form>
+		</div>
 </div>
+		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<script src="/user/mypage/js/eye.js"></script>
 </html>
