--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 <link rel="stylesheet" href="/user/common/css/common.css" />
 <link rel="stylesheet" href="/user/login/css/login.css" />
-
+  
 </head>
 <body>
 	<img src="/user/common/imgs/main-logo.svg" alt="메인로고" class="mainlogo" />
@@ -14,51 +14,48 @@
 		<form th:action="@{/user/loginProc}" method="POST" class="login-form">
     		<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}">
 	        <div class="form-list login">
-	            <div class="form-item id" id="username">
-	                <input id="id" class="id" type="text" th:name="username" 
-	                       placeholder="아이디를 입력하세요" required />
+	            <div class="form-item id" >
+	                <input id="id" type="text" name="username" 
+	                       placeholder="아이디를 입력하세요" />
 	            </div>
-	            <div class="form-item pw" id="password">
-	                <input id="password" class="password" type="password" th:name="password" 
-	                       placeholder="비밀번호를 입력하세요" required />
+	            <div class="form-item pw" >
+	                <input id="password" type="password" name="password" 
+	                       placeholder="비밀번호를 입력하세요" />
 	            </div>
-		        <div class="form-item error" style="display:none;">		            
-			        <div th:if="${param.usernameError}" class="error-message">
-			            <p th:text="${param.usernameError}"></p>
-			        </div>
-		            <div th:if="${param.passwordError}" class="error-message">
-		                <p th:text="${param.passwordError}"></p>
-		            </div>
+		        <div th:if="${param.usernameError != null or param.passwordError != null}" class="error-msg">
+				    <div th:if="${param.usernameError != null}">
+				        <p th:text="${param.usernameError}"></p>
+				    </div>
+				    <div th:if="${param.passwordError != null}">
+				        <p th:text="${param.passwordError}"></p>
+				    </div>
+				</div>
+				<div>	            	                
+		        	<button type="submit" class="default-btn long login" id="loginBtn" disabled >로그인</button>
 		        </div>
 		        <div class="login-function">
 			        <div class="id-store">
-						<div><input type="radio" />아이디 저장 ></div>
-					</div>
-					<div class="findId">
-						<div onclick="window.location.href='/user/find-id';" style="cursor: pointer;">아이디 찾기</div>
-					</div>
-					<div class="findPw">
-						<div onclick="window.location.href='/user/find-id';" style="cursor: pointer;">비밀번호 찾기</div>						
-					</div>
-					
+						<label class="radio"><input type="radio" />아이디 저장 ></label>
+						<label class="text"><a href="/user/find-id">아이디 찾기</a>|<a href="/user/find-pw">비밀번호 찾기</a></label>
+					</div>					
 				</div>
+				
 		        <div class="join-wrap-social">
 					<div>
 						<button><img src="/user/common/imgs/sns-login-btn-naver.png" alt="네이버 소셜 연동" class="social-btn" /></button>	
 					</div>
 					<div>
-						<button ><img src="/user/common/imgs/sns-login-btn-kakao.png" alt="카카오 소셜 연동" class="social-btn" /></button>
+						<button><img src="/user/common/imgs/sns-login-btn-kakao.png" alt="카카오 소셜 연동" class="social-btn" /></button>
 					</div>	
 				</div>
-	        </div>
-			<div>	            	                
-	        	<button type="submit" class="default-btn long login">로그인</button>
 	        </div>
 	        <div>
 	        	<button type="button" class="default-btn long register" onclick="location.href='/user/members/join'">회원가입</button>
 	        </div>
 	    </form>
-	</div>        
-    
+	</div>     
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>	 
+	
+	<script src="/user/login/js/login.js"></script>    
 </body>
 </html>
