--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -18,6 +18,7 @@
     text-align: center;
     line-height: 50px;
     box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
     cursor: pointer;
     opacity: 0;
     transition: all 0.3s;
