--- a/src/main/resources/static/user/cart/css/cart.css
+++ b/src/main/resources/static/user/cart/css/cart.css
@@ -49,11 +49,14 @@
 	margin: 0 8px;
 }
 
-.table-header {
+.table-header, .cart-item {
 	display: flex;
 	gap: 20px;
 	text-align: center;
 	align-items: center;
+}
+
+.table-header {
 	color: #7e7e7e;
 	border-bottom: 1px solid #c0c0c0;
 	padding-bottom: 20px;
@@ -75,14 +78,50 @@
 	width: 190px;
 }
 
+.price-qty {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+}
+
+.cart-item {
+	height: 180px;
+}
+
+.cart-item>.product-info {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: start;
+}
+
+.product-info>img {
+	width: 90px;
+	margin-right: 30px;
+}
+
+.product-title-price {
+	display: flex;
+	flex-direction: column;
+	width: 200px;
+}
+
+.product-title-price > .book-price {
+	font-size: 14px;
+}
+
+.book-amount {
+	margin-bottom: 8px;
+}
+
 .cart-empty {
 	height: 300px;
 	display: flex;
-    align-items: center;
-    justify-content: center;
-    border-bottom: 1px solid #c0c0c0;
-    color: #c0c0c0;
-    font-size: 20px;
+	align-items: center;
+	justify-content: center;
+	border-bottom: 1px solid #c0c0c0;
+	color: #c0c0c0;
+	font-size: 20px;
 }
 
 .cart-control {
@@ -96,7 +135,7 @@
 	border-radius: 5px;
 	background-color: #fff;
 	color: #7e7e7e;
-    line-height: 20px;
+	line-height: 20px;
 	font-weight: 500;
 }
 
