--- a/src/main/resources/templates/user/main/cart.html
+++ b/src/main/resources/templates/user/main/cart.html
@@ -22,13 +22,38 @@
 			<div class="cart-table">
 				<div class="table-header table-columns-area">
 					<div class="check-btn">
-						<input type="checkbox" id="check-btn"> <label for="check-btn"></label>
+						<input type="checkbox" class="check-box"> <label for="check-btn"></label>
 					</div>
 					<div class="table-column product-info">상품정보</div>
 					<div class="table-column price-qty">주문금액/수량</div>
 					<div class="table-column deliver-date">배송일정</div>
 				</div>
 
+				<div class="cart-table-data-wrapper cart-items">
+					<div class="cart-table-data cart-item">
+						<div class="check-btn">
+							<input type="checkbox" class="check-box"> 
+							<label for="check-btn"></label>
+						</div>
+						<div class="product-info">
+							<img src="/user/main/img/books/8809827620321.jpg" alt="책 이미지" />
+							<div class="product-title-price">
+								<span class="book-title">책 제목</span> 
+								<span class="book-price">정가</span>
+							</div>
+						</div>
+
+						<div class="price-qty">
+							<span class="book-amount">가격</span>
+							<div class="reduce-qty">
+								<i class="fa-solid fa-minus"></i> 
+								<input type="number" max="999" id="" class="input-qty" value="1" /> 
+								<i class="fa-solid fa-plus"></i>
+							</div>
+						</div>
+					</div>
+					</div>
+					<!-- 				
 				<div class="cart-items">
 					<div th:each="item : ${cartItems}" class="cart-item">
 						<div class="product-info">
@@ -41,38 +66,39 @@
 							<span>배송일정</span>
 						</div>
 					</div>
-				</div>
-				<div class="cart-empty" th:if="${#lists.isEmpty(cartItems)}">장바구니가 비어 있습니다.</div>
-				<div class="cart-control">
-					<button class="default-btn control-btns delete-product-btn">삭제</button>
-					<button class="default-btn control-btns back-btn">쇼핑 계속하기</button>
+				</div> 
+-->
+					<div class="cart-empty" th:if="${#lists.isEmpty(cartItems)}">장바구니가 비어 있습니다.</div>
+					<div class="cart-control">
+						<button class="default-btn control-btns delete-product-btn">삭제</button>
+						<button class="default-btn control-btns back-btn">쇼핑 계속하기</button>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="aside">
-			<div class="aside-box">
-				<div class="aside-box-content box-content-info">
-					<div class="content-item">
-						<span class="item-title">상품 금액</span>
+			<div class="aside">
+				<div class="aside-box">
+					<div class="aside-box-content box-content-info">
+						<div class="content-item">
+							<span class="item-title">상품 금액</span>
+						</div>
+						<div class="content-item">
+							<span class="item-title">상품 수</span>
+						</div>
+						<div class="content-item">
+							<span class="item-title">배송비</span>
+						</div>
 					</div>
-					<div class="content-item">
-						<span class="item-title">상품 수</span>
+					<div class="aside-box-content box-content-total">
+						<div class="total-title">
+							<span>결제 예정 금액</span>
+						</div>
+						<div class="total-count">
+							<span>원</span>
+						</div>
 					</div>
-					<div class="content-item">
-						<span class="item-title">배송비</span>
-					</div>
+					<button class="default-btn order-btn">주문하기</button>
 				</div>
-				<div class="aside-box-content box-content-total">
-					<div class="total-title">
-						<span>결제 예정 금액</span>
-					</div>
-					<div class="total-count">
-						<span>원</span>
-					</div>
-				</div>
-				<button class="default-btn order-btn">주문하기</button>
 			</div>
 		</div>
 	</div>
-</div>
 </html>
