--- a/src/main/resources/templates/user/main/main.html
+++ b/src/main/resources/templates/user/main/main.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/user/common/layout/mainLayout}"
-      layout:fragment="Content">
-      
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{/user/common/layout/mainLayout}" layout:fragment="Content">
+
 <!-- SWIPER 라이브러리 연결-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <link rel="stylesheet" href="/user/main/css/main.css" />
@@ -13,7 +9,8 @@
 	<!-- Slider main container -->
 	<div class="swiper slide-wrap">
 		<div class="swiper-wrapper">
-			<!-- Slides -->
+			<!-- Slides 
+			
 			<div class="swiper-slide">
 				<img src="/user/main/img/배너1.png" alt="배너1">
 			</div>
@@ -26,11 +23,10 @@
 			<div class="swiper-slide">
 				<img src="/user/main/img/배너4.png" alt="배너4" />
 			</div>			
-		<!-- 			
-			<div class="swiper-slide" th:each="banner : ${bannersDTO}">
-				<img th:src="@{${banner.banner_changed}}" alt="배너" />
-			</div> 
-		-->
+			-->
+                <div class="swiper-slide" th:each="banner : ${banners}">
+                    <img th:src="@{/images/banners/{banner}(banner=${banner.banner_changed})}" alt="배너" />
+                </div>
 		</div>
 
 		<div class="swiper-pagination pagination-btns">
@@ -46,7 +42,24 @@
 			<h2 class="section-title" id="best-seller-month">월의 베스트셀러</h2>
 			<p class="section-title-emoji">🏆</p>
 		</div>
-		<div id="best-books-wrapper" class="section-content-books-wrapper"></div>
+		<div id="best-books-wrapper" class="section-content-books-wrapper">
+
+			<div class="section-content-book" th:each="book : ${bestBooks}">
+				<div class="thumbnail-wrapper">
+					<img th:src="@{/images/books/{book}(book=${book.book_thumbnail_changed})}" alt="썸네일" class="book-thumbnail">
+					<div class="book-interactive">
+						<div class="book-interactive-info" th:text="${book.book_intro}" onclick="location.href=''"></div>
+						<div class="book-interactive-cart">
+							<button onclick="location.href=''" class="add-cart-button">장바구니</button>
+						</div>
+					</div>
+				</div>
+				<div class="book-info" onclick="location.href=''">
+					<h3 class="book-title" th:text="${book.book_name}"></h3>
+					<p class="book-author" th:text="${book.book_author}"></p>
+				</div>
+			</div>
+		</div>
 	</section>
 
 
@@ -56,6 +69,21 @@
 			<p class="section-title-emoji">🔥</p>
 		</div>
 		<div id="new-books-wrapper" class="section-content-books-wrapper">
+			<div class="section-content-book" th:each="book : ${newBooks}">
+				<div class="thumbnail-wrapper">
+					<img th:src="@{/images/books/{book}(book=${book.book_thumbnail_changed})}" alt="썸네일" class="book-thumbnail">
+					<div class="book-interactive">
+						<div class="book-interactive-info" th:text="${book.book_intro}" onclick="location.href=''"></div>
+						<div class="book-interactive-cart">
+							<button onclick="location.href=''" class="add-cart-button">장바구니</button>
+						</div>
+					</div>
+				</div>
+				<div class="book-info" onclick="location.href=''">
+					<h3 class="book-title" th:text="${book.book_name}"></h3>
+					<p class="book-author" th:text="${book.book_author}"></p>
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -64,7 +92,23 @@
 			<h2 class="section-title">평점이 높은 책</h2>
 			<p class="section-title-emoji">🌟</p>
 		</div>
-		<div id="top-rated-books-wrapper" class="section-content-books-wrapper"></div>
+		<div id="top-rated-books-wrapper" class="section-content-books-wrapper">
+			<div class="section-content-book" th:each="book : ${topRatedBooks}">
+				<div class="thumbnail-wrapper">
+					<img th:src="@{/images/books/{book}(book=${book.book_thumbnail_changed})}" alt="썸네일" class="book-thumbnail">
+					<div class="book-interactive">
+						<div class="book-interactive-info" th:text="${book.book_intro}" onclick="location.href=''"></div>
+						<div class="book-interactive-cart">
+							<button onclick="location.href=''" class="add-cart-button">장바구니</button>
+						</div>
+					</div>
+				</div>
+				<div class="book-info" onclick="location.href=''">
+					<h3 class="book-title" th:text="${book.book_name}"></h3>
+					<p class="book-author" th:text="${book.book_author}"></p>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<section class="section section-recommend-books section-wrapper">
@@ -72,7 +116,23 @@
 			<h2 class="section-title">이런 책은 어떠세요?</h2>
 			<p class="section-title-emoji">👀</p>
 		</div>
-		<div id="recommend-books-wrapper" class="section-content-books-wrapper"></div>
+		<div id="recommend-books-wrapper" class="section-content-books-wrapper">
+			<div class="section-content-book" th:each="book : ${recommendBooks}">
+				<div class="thumbnail-wrapper">
+					<img th:src="@{/images/books/{book}(book=${book.book_thumbnail_changed})}" alt="썸네일" class="book-thumbnail">
+					<div class="book-interactive">
+						<div class="book-interactive-info" th:text="${book.book_intro}" onclick="location.href=''"></div>
+						<div class="book-interactive-cart">
+							<button onclick="location.href=''" class="add-cart-button">장바구니</button>
+						</div>
+					</div>
+				</div>
+				<div class="book-info" onclick="location.href=''">
+					<h3 class="book-title" th:text="${book.book_name}"></h3>
+					<p class="book-author" th:text="${book.book_author}"></p>
+				</div>
+			</div>
+		</div>
 	</section>
 </div>
 
